<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">دليل الغربية الطبى</string>
    <string name="notification_channel_id">CH_ID</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lets_go" tools:ignore="StringEscaping">Lets Go</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms"><![CDATA[By continuing, you agree to Terms & Conditions]]></string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="welcome">Welcome</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password ?</string>
    <string name="log_in">LOG IN</string>
    <string name="age">Age</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="underline"><u>SIGN UP</u></string>
    <string name="underline2"><u>LOG IN</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="user_name">User Name</string>
    <string name="patient_name">Patient Name</string>
    <string name="email">Email</string>
    <string name="please_enter_the_code_the_code_has_been_sent_to_your_phone">Please enter the code , the code has been sent to your phone</string>
    <string name="resend_the_code">Resend the code</string>
    <string name="confirm">CONFIRM</string>
    <string name="back">BACK</string>
    <string name="forget_your_password2">Forget your password</string>
    <string name="provide_your_account">provide your account phone for which you want to reset your password</string>
    <string name="your_new_password">Your new password</string>
    <string name="your_identity_has_been_verified_set_your_new_password">Your identity has been verified set your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointments">Appointments</string>
    <string name="contact_us">Contact US</string>
    <string name="complaints">Complaints</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="notifications">Notifications</string>
    <string name="reminders">Reminders</string>
    <string name="logout">Logout</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley</string>
    <string name="setting">Setting</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="lang">Arabic</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="current_appointments">Current Appointments</string>
    <string name="previous_appointments">Previous Appointments</string>
    <string name="doctor">Doctor</string>
    <string name="egp">EGP</string>
    <string name="complaint_and_suggestion">Complaint and suggestion</string>
    <string name="send">Send</string>
    <string name="your_message">Your Message</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo.</string>
    <string name="are_you_sure_you_want_to_logout">are you sure you want to logout</string>
    <string name="text_logout">Logging out will temporarily hide all your personal data, including bookings. To see these adain, just log back in to your account.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="city">City</string>
    <string name="clinics">Clinics</string>
    <string name="medical_centers">Medical Centers</string>
    <string name="hospital">Hospital</string>
    <string name="analysis_laboratories">Analysis Laboratories</string>
    <string name="x_rays">X-Rays</string>
    <string name="doctors">Doctors</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="dental">Dental</string>
    <string name="heart">Heart</string>
    <string name="brain">Brain</string>
    <string name="bone">Bone</string>
    <string name="sort">SORT</string>
    <string name="book">Book</string>
    <string name="sponsored">SPONSORED</string>
    <string name="name">Name</string>
    <string name="sort_by">SORT BY</string>
    <string name="low_to_high">Low to high</string>
    <string name="high_to_low">High to low</string>
    <string name="medical_degree">Medical degree</string>
    <string name="personal_info">Personal Info</string>
    <string name="reviews">Reviews</string>
    <string name="appointment_confirmed">Appointment Confirmed!</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="error">Error</string>
    <string name="okay">Okay</string>
    <string name="allrequired">All fields required</string>
    <string name="time_booked">this time is booked</string>
    <string name="choose_time">Choose Time</string>
    <string name="weakpass">weak password</string>
    <string name="password_match">Password not match</string>
    <string name="incorrectphone">incorrect phone</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="required_photo">Photo is required</string>
    <string name="success">Success 😍️</string>
    <string name="failed">Failed ☹️</string>
    <string name="waiting_for_location">Waiting for Location…</string>
    <string name="api_key" translatable="false">AIzaSyCoV4yvSpXtvzrzdf8yPkGVVwt8qhA-DJM</string>
    <string name="dewan">Diwan</string>
    <string name="dewan_channel">Diwan Channel</string>
    <string name="no_data">No Data</string>
    <string name="your_loc">Your Location</string>
    <string name="note">Note</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="patient_details">Patient Details</string>
    <string name="gharbia_medical_guide">Diwan Medical Channel</string>
    <string name="press_again">Click BACK again to exit</string>
    <string name="rate">Rate</string>
    <string name="done">Done</string>
    <string name="use_your_current_location">Use your current location</string>
    <string name="price">Price :</string>
    <string name="review2">Review</string>
    <string name="feedback">FEEDBACK</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="closed">Closed</string>
    <string name="search">Search</string>
    <string name="rating">Rating</string>
    <string name="department">Department</string>
    <string name="degree">Master Degree</string>
    <string name="name_required">name required</string>
    <string name="date">Date :</string>
    <string name="advisor">Advisor</string>
    <string name="specialist">Specialist</string>
    <string name="phd">PhD</string>
    <string name="master">Master</string>
    <string name="assistantprofessor">Assistant Professor</string>
    <string name="professor">Professor</string>
    <string name="teacherassistant">Teacher Assistant</string>
    <string name="teacher">Teacher</string>

</resources>