<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <com.gharbia.medical.MyTextViewCairo
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

        <com.gharbia.medical.MyTextViewCairo
            android:textStyle="bold"            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_logout"
            android:textColor="#6A6A6A"
            android:textSize="@dimen/_12sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_15sdp">

                <com.gharbia.medical.MyTextViewCairo
                    android:textStyle="bold"
                    android:id="@+id/cancel"
                    android:background="@drawable/rounded_dark_grey"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/no"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"/>

                <com.gharbia.medical.MyTextViewCairo
                    android:textStyle="bold"
                    android:id="@+id/proceed"
                    android:background="@drawable/rounded_blue_3"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>