<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="verificationVM"
            type="com.gharbia.medical.viewModel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginActivity">

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            >

            <FrameLayout
                android:visibility="gone"
                android:id="@+id/back_frame"
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                tools:ignore="ObsoleteLayoutParam,UselessParent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            </FrameLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/logo_newwwwwwww"
                android:id="@+id/image"
                android:layout_gravity="center_horizontal"/>

            <com.gharbia.medical.MyTextViewCairo
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in_to_continue"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/title"/>

            <com.gharbia.medical.MyTextViewCairo
                android:layout_width="match_parent"
                android:id="@+id/welcome"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textColor="@color/hint"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shape_border"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:id="@+id/phone_img"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textAlignment="viewStart"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@android:color/transparent"
                    android:paddingStart="@dimen/_10sdp"
                    android:id="@+id/phone_txt"
                    android:textSize="@dimen/_12sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/phone_number"
                    tools:ignore="RtlSymmetry" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shape_border"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/padlock"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:id="@+id/password_img"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textAlignment="viewStart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@android:color/transparent"
                    android:paddingStart="@dimen/_10sdp"
                    android:id="@+id/password_txt"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:maxLines="1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    tools:ignore="RtlSymmetry" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.gharbia.medical.MyTextViewCairo
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_your_password"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:id="@+id/forget_password"
                android:textStyle="bold"/>

            <com.gharbia.medical.MyTextViewCairo
                android:onClick="@{()->verificationVM.Validate()}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/log_in"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_blue_3"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_30sdp"
                android:id="@+id/login"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_gravity="center"
                android:gravity="center">

                <com.gharbia.medical.MyTextViewCairo
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/hint"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold"/>

                <com.gharbia.medical.MyTextViewCairo
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/underline"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_5sdp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>