<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="verificationVM"
            type="com.gharbia.medical.viewModel.ComplaintViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.AppointmentsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:background="@color/blue">

            <FrameLayout
                android:onClick="@{()->verificationVM.back()}"
                android:id="@+id/back_frame"
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                tools:ignore="ObsoleteLayoutParam,UselessParent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24_white" />

            </FrameLayout>

            <com.gharbia.medical.MyTextViewCairo
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaints"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/full_lay">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/complaint_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"/>

            <com.gharbia.medical.MyTextViewCairo
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complaint_and_suggestion"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:background="@drawable/shape_border"
                android:layout_margin="@dimen/_15sdp"
                android:textAlignment="viewStart"
                android:hint="@string/your_message"
                android:gravity="start"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gharbia.medical.MyTextViewCairo
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/send"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_blue_3"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:id="@+id/sign_up"/>

                <com.gharbia.medical.MyTextViewCairo
                    android:layout_below="@+id/sign_up"
                    android:layout_centerHorizontal="true"
                    android:onClick="@{()->verificationVM.back()}"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/back"
                    android:textColor="@color/hint"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_gravity="center_horizontal"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>